<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Calcu">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="calcular"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt0"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonCero"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv1"
        app:layout_constraintTop_toBottomOf="@+id/gh2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btClear"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonClear"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv1"
        app:layout_constraintTop_toBottomOf="@+id/gh6"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt7"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonSiete"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv1"
        app:layout_constraintTop_toBottomOf="@+id/gh5"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDiv"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonDiv"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv4"
        app:layout_constraintTop_toBottomOf="@+id/gh6"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMult"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonMult"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv4"
        app:layout_constraintTop_toBottomOf="@+id/gh5"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt9"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonNueve"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv3"
        app:layout_constraintTop_toBottomOf="@+id/gh5"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt8"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonOcho"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv2"
        app:layout_constraintTop_toBottomOf="@+id/gh5"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt4"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonCuatro"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv1"
        app:layout_constraintTop_toBottomOf="@+id/gh4"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt5"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonCinco"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv2"
        app:layout_constraintTop_toBottomOf="@+id/gh4"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt6"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonSeis"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv3"
        app:layout_constraintTop_toBottomOf="@+id/gh4"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMinus"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonMinus"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv4"
        app:layout_constraintTop_toBottomOf="@+id/gh4"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPlus"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv4"
        app:layout_constraintTop_toBottomOf="@+id/gh3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt3"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonTres"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv3"
        app:layout_constraintTop_toBottomOf="@+id/gh3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt2"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonDos"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv2"
        app:layout_constraintTop_toBottomOf="@+id/gh3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt1"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonUno"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gv1"
        app:layout_constraintTop_toBottomOf="@+id/gh3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btComma"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonComma"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintStart_toEndOf="@+id/gv3"
        app:layout_constraintTop_toBottomOf="@+id/gh2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEquals"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="calcular"
        android:text="@string/buttonEquals"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintStart_toEndOf="@+id/gv4"
        app:layout_constraintTop_toBottomOf="@+id/gh2" />

    <View
        android:id="@+id/separator"
        style="@style/Separator"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/gh6"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintStart_toEndOf="@+id/gv4"
        app:layout_constraintTop_toBottomOf="@+id/gh1" />


    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/ScreenNumber"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="end|center"
        android:text="@string/buttonCero"
        app:layout_constraintBottom_toTopOf="@id/gh6"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintStart_toEndOf="@+id/gv1"
        app:layout_constraintTop_toBottomOf="@+id/gh7"/>

</androidx.constraintlayout.widget.ConstraintLayout>